Bug 58040 - Log Forging and marked POILogger/POILogFactory internal
git-svn-id: https://svn.apache.org/repos/asf/poi/trunk@1686748 13f79535-47bb-0310-9956-ffa450edef68